--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,8 +1,3 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
-}
-
 body {
     background-color: rgb(121, 97, 189);
 
@@ -16,3 +11,12 @@ main {
     box-shadow: 3px 3px 3px 5px rgba(0, 0, 0, 0.863);
 }
 
+h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 50px;
+}
+
+p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 24px;
+}
