--- a/python/estilos/style.css
+++ b/python/estilos/style.css
@@ -14,6 +14,7 @@ main {
 h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 50px;
+    color: rgba(0, 0, 0, 0.863);
 }
 
 p {
